--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "cryptr": "^6.4.0",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "google-auth-library": "^10.5.0",
     "mongoose": "^8.18.3",
+    "nodejs-base64-converter": "^1.0.5",
     "raviger": "^5.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
